finished DOM Demo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Demo</title>
     <link rel="stylesheet" href="app.css">
+    <script src="app.js"></script>
 </head>
 <body>
     <div class="pagewrapper">
@@ -12,8 +13,8 @@
         <section class="left">
 
             <div class="certificate">
-                <span id="name"></span>
-                <span id="info"></span>
+                <span id="nameTag">NameInput</span>
+                <span id="info">InfoInput</span>
             </div>
 
         </section>
@@ -31,6 +32,8 @@
                     <option value="D">D</option>
                 </select>
         
+                <input type="submit">
+
             </form>
         </section>
 
